--- a/posts/templates/base.html
+++ b/posts/templates/base.html
@@ -2,18 +2,47 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
-     <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
-    {% load static %}
-  <link rel="stylesheet" href="{% static 'css/styles.css' %}">
 
-    <link rel="stylesheet" href="'/static/css/base.css">
+
+    <title>Blog</title>
 </head>
 <body>
+<nav class="navbar navbar-inverse ">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="#">KenyaYetu</a>
+    </div>
+    <div class="collapse navbar-collapse" id="myNavbar">
+      <ul class="nav navbar-nav">
+        <li class="active"><a href="{% url 'list' %}">Home</a></li>
+        <li><a href="{% url 'create' %}">Create post</a></li>
+        <li><a href="#">Page 2</a></li>
+        <li><a href="#">Page 3</a></li>
+      </ul>
+        <form class="navbar-form navbar-left">
+      <div class="form-group">
+        <input type="text" class="form-control" placeholder="Search">
+      </div>
+      <button type="submit" class="btn btn-default">Submit</button>
+    </form>
+        <button class="btn btn-danger navbar-btn">About me</button>
+      <ul class="nav navbar-nav navbar-right">
+        <li><a href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
+        <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+      </ul>
+    </div>
+  </div>
+</nav>
+{% block content %}{% endblock %}
         {% if messages %}
         <div class="messages">
 
@@ -25,18 +54,6 @@
 
 </div>
 {% endif %}
-<div class="container">
-    {% block content %}
-<h2>{% for obj in object_list %}</h2>
- <a href = "{{obj.get_absolute_url }}">{{obj.title}}</a>
-
-
-{{ obj.content}}<br>
-{{ obj.timestamp}}<br>
-{{ obj.update}}<br>
-{% endfor %}
-    {% endblock content %}
-</div>
 
 </body>
 </html>
