--- a/posts/templates/base.html
+++ b/posts/templates/base.html
@@ -25,7 +25,7 @@
       <ul class="nav navbar-nav">
         <li class="active"><a href="{% url 'list' %}">Home</a></li>
         <li><a href="{% url 'create' %}">Create post</a></li>
-        <li><a href="#">Page 2</a></li>
+        <li><a href="">Logout</a></li>
         <li><a href="#">Page 3</a></li>
       </ul>
         <form class="navbar-form navbar-left">
