--- a/posts/templates/post_form.html
+++ b/posts/templates/post_form.html
@@ -5,9 +5,10 @@
 <div class='col-sm-6 col-sm-offset-3'>
 <h1>Form</h1>
 
-<form method='POST' action='' enctype="multipart/form-data">{% csrf_token %}
+<form method='POST' action='' class="post-form" enctype="multipart/form-data">
+    {% csrf_token %}
 {{ form.as_p }}
-<input type='submit' class='btn btn-default' value='Create Post' />
+<button type='submit' class='btn btn-default'>Create</button>
 </form>
 </div>
 {% endblock content %}
