--- a/posts/templates/posts/post_list.html
+++ b/posts/templates/posts/post_list.html
@@ -55,13 +55,22 @@
   <div class="col-sm-6 col-md-4 ">
     <div class="thumbnail">
       <div class="caption">
-        <h3><a href="{{post.get_absolute_url}}">{{post.title}}</a> </h3>
+        <h3><a href="{{post.get_absolute_url}}" >{{post.title}}</a> </h3>
         <p> {{post.content}}</p>
         <p>{% if post.image %}</p>
          <img src='{{ post.image.url }}' class='img-responsive' style="width:300px;height:300px;" />
         {% endif %}
        <br>
-        <p><a href="" class="btn btn-primary" role="button">Update</a> <a href="#" class="btn btn-default" role="button">Button</a></p>
+        <p><a href="{% url 'post_edit' pk=post.pk %}" class="btn btn-primary" role="button">Update</a> <a href="#" class="btn btn-default" role="button">Button</a></p>
+       {% for post in posts %}
+        <div class="post">
+            <div class="date">
+                {{ post.published_date }}
+            </div>
+            <h1><a href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a></h1>
+            <p>{{ post.text|linebreaksbr }}</p>
+           <a href="{% url 'post_detail' pk=post.pk %}">Comments: {{ post.approved_comments.count }}</a></div>
+    {% endfor %}
       </div>
     </div>
   </div>
